fixed spacing

--- a/style.css
+++ b/style.css
@@ -97,6 +97,8 @@ footer div p {
     text-align: center;
     width: 75%;
     padding: 1.5%;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 p{
     font-size: 1.2rem;
